[package]
name = "datafusion-jdbc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { version = "46", features = ["prettyprint", "dyn_cmp_dict"] }
arrow-flight = { version = "46", features = ["flight-sql-experimental"] }
arrow-schema = { version = "46", default-features = false }
async-trait = "0.1.41"
clap = { version = "3", features = ["derive", "cargo"] }
dashmap = "5.4"
datafusion = { version = "31.0.0" }
deltalake = { version = "0.15.0", features = ["datafusion", "hdfs"] }
env_logger = "0.10"
futures = "0.3"
log = "0.4"
mimalloc = { version = "0.1", default-features = false }
prost = { version = "0.11", default-features = false }
prost-derive = { version = "0.11", default-features = false }
regex = "1.9.5"
simplelog = "0.12.0"
tonic = "0.9"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync", "parking_lot"] }
uuid = "1.2"
url = "2.2"

[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1

[profile.release]
opt-level = 3

[patch.crates-io]
datafusion-objectstore-hdfs = { git = "https://github.com/datafusion-contrib/datafusion-objectstore-hdfs.git", rev = "5b524550af25ef56cf55bbeba2f22273912676d1" }
deltalake = { git = "https://github.com/yjshen/delta-rs.git", branch = "action_path_fix" }
